--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,11 @@ html { box-sizing: border-box;}
 
 .App {
   text-align: center;
+  font-family: 'Poppins', sans-serif;
+}
+
+body {
+  font-size: 62.5%;
 }
 
 .wrapper {
@@ -16,20 +21,109 @@ html { box-sizing: border-box;}
   margin: 0 auto;
 }
 
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+p {
+  font-size: 1rem;
+}
+
+select {
+  width: 10vw;
+  padding: 15px;
+  font-size: 1.5rem;
+}
+
+
 .stationList {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 15vh;
 }
 
 .stationInfo {
   display: flex;
-  flex-direction: column;
   width: calc((100%/3) - 30px);
   margin: 10px;
   border: 2px solid red;
+  border-radius: 20px;
+}
+
+.stationInfo p {
+  margin: 0;
+  padding: 5px 0
+}
+
+
+.image {
+  width: 25%;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+.image img {
+  margin: auto 0;
+  width: 70px;
+  height: 70px;
+}
+
+.information {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  align-content: flex-start;
+  justify-content: center;
+  text-align: left;
+  padding: 10px 0;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  width: 25%;
 }
 
 .infoButton {
-  width: 35%;
+  width: 60px;
+  height: 60px;
+  margin: 10px;
+  font-size: 1.5rem;
+  position: relative;
+  border: 1px solid red;
+  border-radius: 150px;
+  background-color: transparent;
+  align-self: center;
+}
+
+.infoButtonPlaying {
+  /* width: 35%; */
   margin: 10px auto;
+  padding: 7px 12px;
+  position: relative;
+  width: 60px;
+  height: 60px;
+  border-radius: 150px;
+  border: 1px solid red;
+  background-color: transparent;
+  font-family: 'Poppins', sans-serif;
+  background-image: url('./assets/soundBars.gif');
+  background-size: 50px;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: inline-block;
+  align-self: center;
+}
+
+.radioPlayer {
+  position: fixed;
+  bottom: 0;
+  left: 20vw;
+  width: 60%;
 }
