--- a/src/Radio.css
+++ b/src/Radio.css
@@ -1,3 +1,12 @@
+
+.rhap_additional-controls {
+    display: none;
+}
+
+.rhap_total-time {
+    display: none;
+}
+
 /* .rhap_main {
     background-color: red;
 } */
