--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@ html { box-sizing: border-box;}
 
 body {
   font-size: 62.5%;
+  color: #ede8e7;
+  background-color: #1e2021;
+  border: 35px solid black;
+  height: 100%;
 }
 
 .wrapper {
@@ -23,14 +27,23 @@ body {
 
 h1 {
   font-size: 3rem;
+  font-family: 'Michroma', sans-serif;
 }
 
 h2 {
   font-size: 2rem;
 }
 
+h3 {
+  font-size: 1rem;
+}
+
 p {
   font-size: 1rem;
+}
+
+.genreContainer {
+  text-align: center;
 }
 
 select {
@@ -39,6 +52,13 @@ select {
   font-size: 1.5rem;
 }
 
+.stationContainer {
+  text-align: center;
+}
+
+.stationContainer h2 {
+  font-size: 1.5rem;
+}
 
 .stationList {
   display: flex;
@@ -50,14 +70,32 @@ select {
   display: flex;
   width: calc((100%/3) - 30px);
   margin: 10px;
-  border: 2px solid red;
+  border: 4px solid #09a9f4;
   border-radius: 20px;
+  background-color: #ebe7e7;
+}
+
+.stationInfoPlaying {
+  display: flex;
+  width: calc((100%/3) - 30px);
+  margin: 10px;
+  border: 4px solid #d64b4b;
+  border-radius: 20px;
+  background-color: #ebe7e7;
 }
 
 .stationInfo p {
   margin: 0;
-  padding: 5px 0
+  padding: 5px 0;
+  color: #1e2021;
 }
+
+.stationInfoPlaying p {
+  margin: 0;
+  padding: 5px 0;
+  color: #1e2021;
+}
+
 
 
 .image {
@@ -83,6 +121,14 @@ select {
   padding: 10px 0;
 }
 
+.stationName {
+  font-weight: 900;
+}
+
+.stationCountry {
+  font-weight: 500;
+}
+
 .buttonContainer {
   display: flex;
   justify-content: center;
@@ -96,10 +142,12 @@ select {
   margin: 10px;
   font-size: 1.5rem;
   position: relative;
-  border: 1px solid red;
+  border: 5px solid #1e2021;
+  color: #d64b4b;
   border-radius: 150px;
   background-color: transparent;
   align-self: center;
+  padding: 5px 0 0 5px;
 }
 
 .infoButtonPlaying {
@@ -109,7 +157,7 @@ select {
   width: 60px;
   height: 60px;
   border-radius: 150px;
-  border: 1px solid red;
+  border: 5px solid #1e2021;
   background-color: transparent;
   font-family: 'Poppins', sans-serif;
   background-image: url('./assets/soundBars.gif');
@@ -122,7 +170,7 @@ select {
 
 .radioPlayer {
   position: fixed;
-  bottom: 0;
+  bottom: 2%;
   left: 20vw;
   width: 60%;
 }
