--- a/src/Radio.css
+++ b/src/Radio.css
@@ -1,3 +1,7 @@
+.radioPlayer {
+    border: 3px solid black;
+    border-radius: 25px;
+}
 
 .rhap_additional-controls {
     display: none;
@@ -5,6 +9,47 @@
 
 .rhap_total-time {
     display: none;
+}
+
+.rhap_main {
+    background-color: #424242;
+}
+
+.rhap_main-controls {
+    position: relative;
+    left: 22.5%;
+}
+
+.rhap_container {
+    background-color: #424242;
+    padding: 12.5px;
+    border-radius: 20px;
+}
+
+.rhap_progress-indicator {
+    background-color: #d64b4b;
+    border: 2px solid #1e2021;
+}
+
+.rhap_progress-bar {
+    background-color: #ede8e7;
+}
+
+#rhap_current-time {
+    color: #ede8e7;
+}
+
+.rhap_button-clear {
+    color: #ede8e7;
+}
+
+/* .rhap_play-pause-button svg {
+    color: #d64b4b;
+} */
+
+.rhap_volume-indicator {
+    background-color: #d64b4b;
+    border: 2px solid #1e2021;
 }
 
 /* .rhap_main {
