--- a/src/Radio.css
+++ b/src/Radio.css
@@ -33,17 +33,61 @@
 
 .rhap_progress-bar {
     background-color: #ede8e7;
+    /* display */
 }
 
 #rhap_current-time {
     color: #ede8e7;
+    display: inline;
 }
 
 .rhap_button-clear {
     color: #ede8e7;
 }
 
+.rhap_play-pause-button {
+    position: relative;
+    left: -50%;
+}
+
 .rhap_volume-indicator {
     background-color: #d64b4b;
     border: 2px solid #1e2021;
+}
+
+.rhap_horizontal-reverse {
+    margin: 0
+}
+
+.rhap_volume-bar-area {
+    display: inherit;
+}
+    
+.rhap_progress-section {
+    display: inline-flex
+}
+
+
+
+@media (max-width: 850px) {
+
+    .rhap_horizontal-reverse {
+        margin: 0 auto;
+    }
+
+    .rhap_volume-bar-area {
+        display: none;
+    }
+
+    #rhap_current-time {
+        display: none;
+    }
+
+    .rhap_progress-bar {
+        display: none;
+    }
+
+    .rhap_progress-section {
+        display: none;
+    }
 }
