--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
+html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search][type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration::-webkit-file-upload-buttondetails,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}::-webkit-scrollbar {display: none;}
 
 html { box-sizing: border-box;}
 
@@ -6,18 +6,15 @@ html { box-sizing: border-box;}
 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 
-.App {
-  text-align: center;
-  font-family: 'Poppins', sans-serif;
-}
+
 
 body {
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  height: 100%;
   font-size: 62.5%;
   color: #ede8e7;
   background-color: #1e2021;
-  border: 35px solid black;
-  height: 100%;
-  padding-bottom: 50px;
 }
 
 .wrapper {
@@ -29,6 +26,7 @@ body {
 h1 {
   font-size: 3rem;
   font-family: 'Michroma', sans-serif;
+  margin-bottom: 0;
 }
 
 h2 {
@@ -43,8 +41,44 @@ p {
   font-size: 1rem;
 }
 
+.landing {
+  margin: 75px 0 0;
+  height: 100%;
+  position: relative;
+}
+
+.titleContainer {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+#juno {
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  right: 35%;
+}
+
+.title {
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.title:hover {
+  transform: scale(1.04);
+  animation: blend 0.3s linear 1 normal forwards;
+}
+
+.title:hover + #juno {
+  visibility: visible;
+  animation: fadeIn 0.75s linear 1 normal forwards;
+}
+
 .genreContainer {
   text-align: center;
+  height: 100%;
+  margin: 35px 0;
 }
 
 select {
@@ -57,6 +91,7 @@ select {
 
 .stationContainer {
   text-align: center;
+  height: 100%;
 }
 
 .stationContainer h2 {
@@ -98,8 +133,6 @@ select {
   padding: 5px 0;
   color: #1e2021;
 }
-
-
 
 .image {
   width: 25%;
@@ -178,6 +211,41 @@ select {
   left: 30vw;
   width: 40%;
 }
+
+.footer {
+  font-size: 0.75rem;
+  padding: 20px 0;
+  border-top: 2px solid #ede8e7;
+  width: 75%;
+  margin: 0 auto;
+  position: absolute;
+  bottom: 0;
+  left: 12.5%;
+}
+
+/* animations */
+
+@keyframes blend {
+  0% {
+    color: #ede8e7;
+  }
+
+  100% {
+    color: #f49919;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+/* media queries */
 
 @media (max-width: 1250px) {
   .stationInfo, .stationInfoPlaying {
